src/front_end/src/main/java/tbox/language/frontend/TBoxParser.java
// Generated from D:/tbox-language/src/front_end\TBox.g4 by ANTLR 4.9.1
package tbox.language.frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TBoxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, WS=2, LineComment=3, BlockComment=4, Import=5, Export=6, Of=7, 
		Static=8, True=9, False=10, Null=11, Func=12, Class=13, Struct=14, Enum=15, 
		Interface=16, Abstract=17, Override=18, Public=19, Protected=20, Private=21, 
		Internal=22, Friendly=23, Friend=24, If=25, Else=26, Elif=27, Switch=28, 
		For=29, Foreach=30, While=31, Do=32, Break=33, Return=34, Num=35, Byte=36, 
		Short=37, Int=38, Long=39, Float=40, Double=41, Bool=42, String=43, Char=44, 
		Var=45, Comma=46, Question=47, SemiColon=48, Colon=49, LeftParen=50, RightParen=51, 
		LeftBracket=52, RightBracket=53, LeftBrace=54, RightBrace=55, LeftShift=56, 
		RightShift=57, Plus=58, Increase=59, Minus=60, Decrease=61, Star=62, Div=63, 
		Mod=64, And=65, LogicAnd=66, Or=67, LogicOr=68, Xor=69, Not=70, Tilde=71, 
		Assign=72, MulAssign=73, DivAssign=74, ModAssign=75, PlusAssign=76, MinusAssign=77, 
		LeftShiftAssign=78, RightShiftAssign=79, AndAssign=80, XorAssign=81, OrAssign=82, 
		Less=83, LessEqual=84, Greater=85, GreaterEqual=86, Equal=87, NotEqual=88, 
		Arrow=89, Dot=90, Ellipsis=91, Dollar=92, BinNum=93, OctNum=94, DecNum=95, 
		HexNum=96, Identifier=97, StringConstant=98;
	public static final int
		RULE_num = 0, RULE_constant = 1, RULE_primExpr = 2, RULE_postExpr = 3, 
		RULE_unaryExpr = 4, RULE_castExpr = 5, RULE_mulExpr = 6, RULE_addExpr = 7, 
		RULE_shiftExpr = 8, RULE_relatExpr = 9, RULE_equExpr = 10, RULE_andExpr = 11, 
		RULE_xorExpr = 12, RULE_orExpr = 13, RULE_logicAndExpr = 14, RULE_logicOrExpr = 15, 
		RULE_quesExpr = 16, RULE_assignExpr = 17, RULE_args = 18, RULE_expr = 19, 
		RULE_library = 20, RULE_importStmt = 21, RULE_type = 22, RULE_argsNeed = 23, 
		RULE_program = 24, RULE_stmt = 25, RULE_returnStmt = 26, RULE_defVarStmt = 27, 
		RULE_ifStmt = 28, RULE_forStmt = 29, RULE_whileStmt = 30, RULE_doWhileStmt = 31, 
		RULE_defFuncStmt = 32, RULE_stat = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"num", "constant", "primExpr", "postExpr", "unaryExpr", "castExpr", "mulExpr", 
			"addExpr", "shiftExpr", "relatExpr", "equExpr", "andExpr", "xorExpr", 
			"orExpr", "logicAndExpr", "logicOrExpr", "quesExpr", "assignExpr", "args", 
			"expr", "library", "importStmt", "type", "argsNeed", "program", "stmt", 
			"returnStmt", "defVarStmt", "ifStmt", "forStmt", "whileStmt", "doWhileStmt", 
			"defFuncStmt", "stat"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'[]'", null, null, null, "'import'", "'export'", "'of'", "'static'", 
			"'true'", "'false'", "'null'", "'func'", "'class'", "'struct'", "'enum'", 
			"'interface'", "'abstract'", "'override'", "'public'", "'protected'", 
			"'private'", "'internal'", "'friendly'", "'friend'", "'if'", "'else'", 
			"'elif'", "'switch'", "'for'", "'foreach'", "'while'", "'do'", "'break'", 
			"'return'", "'num'", "'byte'", "'short'", "'int'", "'long'", "'float'", 
			"'double'", "'bool'", "'string'", "'char'", "'var'", "','", "'?'", "';'", 
			"':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<<'", "'>>'", "'+'", 
			"'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'&&'", "'|'", "'||'", 
			"'^'", "'!'", "'~'", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
			"'>>='", "'&='", "'^='", "'|='", "'<'", "'<='", "'>'", "'>='", "'=='", 
			"'!='", "'->'", "'.'", "'...'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "WS", "LineComment", "BlockComment", "Import", "Export", 
			"Of", "Static", "True", "False", "Null", "Func", "Class", "Struct", "Enum", 
			"Interface", "Abstract", "Override", "Public", "Protected", "Private", 
			"Internal", "Friendly", "Friend", "If", "Else", "Elif", "Switch", "For", 
			"Foreach", "While", "Do", "Break", "Return", "Num", "Byte", "Short", 
			"Int", "Long", "Float", "Double", "Bool", "String", "Char", "Var", "Comma", 
			"Question", "SemiColon", "Colon", "LeftParen", "RightParen", "LeftBracket", 
			"RightBracket", "LeftBrace", "RightBrace", "LeftShift", "RightShift", 
			"Plus", "Increase", "Minus", "Decrease", "Star", "Div", "Mod", "And", 
			"LogicAnd", "Or", "LogicOr", "Xor", "Not", "Tilde", "Assign", "MulAssign", 
			"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
			"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Less", "LessEqual", 
			"Greater", "GreaterEqual", "Equal", "NotEqual", "Arrow", "Dot", "Ellipsis", 
			"Dollar", "BinNum", "OctNum", "DecNum", "HexNum", "Identifier", "StringConstant"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TBox.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TBoxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class NumContext extends ParserRuleContext {
		public TerminalNode BinNum() { return getToken(TBoxParser.BinNum, 0); }
		public TerminalNode OctNum() { return getToken(TBoxParser.OctNum, 0); }
		public TerminalNode DecNum() { return getToken(TBoxParser.DecNum, 0); }
		public TerminalNode HexNum() { return getToken(TBoxParser.HexNum, 0); }
		public NumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitNum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumContext num() throws RecognitionException {
		NumContext _localctx = new NumContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_num);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !(((((_la - 93)) & ~0x3f) == 0 && ((1L << (_la - 93)) & ((1L << (BinNum - 93)) | (1L << (OctNum - 93)) | (1L << (DecNum - 93)) | (1L << (HexNum - 93)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode StringConstant() { return getToken(TBoxParser.StringConstant, 0); }
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constant);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringConstant:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(StringConstant);
				}
				break;
			case BinNum:
			case OctNum:
			case DecNum:
			case HexNum:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				num();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimExprContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public LibraryContext library() {
			return getRuleContext(LibraryContext.class,0);
		}
		public TerminalNode LeftParen() { return getToken(TBoxParser.LeftParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(TBoxParser.RightParen, 0); }
		public PrimExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterPrimExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitPrimExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitPrimExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimExprContext primExpr() throws RecognitionException {
		PrimExprContext _localctx = new PrimExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primExpr);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BinNum:
			case OctNum:
			case DecNum:
			case HexNum:
			case StringConstant:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				constant();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				library(0);
				}
				break;
			case LeftParen:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				match(LeftParen);
				setState(77);
				expr();
				setState(78);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostExprContext extends ParserRuleContext {
		public PrimExprContext primExpr() {
			return getRuleContext(PrimExprContext.class,0);
		}
		public List<TerminalNode> LeftBracket() { return getTokens(TBoxParser.LeftBracket); }
		public TerminalNode LeftBracket(int i) {
			return getToken(TBoxParser.LeftBracket, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> RightBracket() { return getTokens(TBoxParser.RightBracket); }
		public TerminalNode RightBracket(int i) {
			return getToken(TBoxParser.RightBracket, i);
		}
		public List<TerminalNode> LeftParen() { return getTokens(TBoxParser.LeftParen); }
		public TerminalNode LeftParen(int i) {
			return getToken(TBoxParser.LeftParen, i);
		}
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public List<TerminalNode> RightParen() { return getTokens(TBoxParser.RightParen); }
		public TerminalNode RightParen(int i) {
			return getToken(TBoxParser.RightParen, i);
		}
		public List<LibraryContext> library() {
			return getRuleContexts(LibraryContext.class);
		}
		public LibraryContext library(int i) {
			return getRuleContext(LibraryContext.class,i);
		}
		public List<TerminalNode> Increase() { return getTokens(TBoxParser.Increase); }
		public TerminalNode Increase(int i) {
			return getToken(TBoxParser.Increase, i);
		}
		public List<TerminalNode> Decrease() { return getTokens(TBoxParser.Decrease); }
		public TerminalNode Decrease(int i) {
			return getToken(TBoxParser.Decrease, i);
		}
		public List<TerminalNode> Dot() { return getTokens(TBoxParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(TBoxParser.Dot, i);
		}
		public PostExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterPostExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitPostExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitPostExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostExprContext postExpr() throws RecognitionException {
		PostExprContext _localctx = new PostExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_postExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			primExpr();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 50)) & ~0x3f) == 0 && ((1L << (_la - 50)) & ((1L << (LeftParen - 50)) | (1L << (LeftBracket - 50)) | (1L << (Increase - 50)) | (1L << (Decrease - 50)) | (1L << (Dot - 50)))) != 0)) {
				{
				setState(94);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LeftBracket:
					{
					setState(83);
					match(LeftBracket);
					setState(84);
					expr();
					setState(85);
					match(RightBracket);
					}
					break;
				case LeftParen:
					{
					setState(87);
					match(LeftParen);
					setState(88);
					args();
					setState(89);
					match(RightParen);
					}
					break;
				case Dot:
					{
					{
					setState(91);
					match(Dot);
					}
					setState(92);
					library(0);
					}
					break;
				case Increase:
				case Decrease:
					{
					setState(93);
					_la = _input.LA(1);
					if ( !(_la==Increase || _la==Decrease) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryExprContext extends ParserRuleContext {
		public PostExprContext postExpr() {
			return getRuleContext(PostExprContext.class,0);
		}
		public CastExprContext castExpr() {
			return getRuleContext(CastExprContext.class,0);
		}
		public TerminalNode LogicAnd() { return getToken(TBoxParser.LogicAnd, 0); }
		public LibraryContext library() {
			return getRuleContext(LibraryContext.class,0);
		}
		public TerminalNode And() { return getToken(TBoxParser.And, 0); }
		public TerminalNode Tilde() { return getToken(TBoxParser.Tilde, 0); }
		public TerminalNode Not() { return getToken(TBoxParser.Not, 0); }
		public List<TerminalNode> Increase() { return getTokens(TBoxParser.Increase); }
		public TerminalNode Increase(int i) {
			return getToken(TBoxParser.Increase, i);
		}
		public List<TerminalNode> Decrease() { return getTokens(TBoxParser.Decrease); }
		public TerminalNode Decrease(int i) {
			return getToken(TBoxParser.Decrease, i);
		}
		public UnaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterUnaryExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitUnaryExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitUnaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryExprContext unaryExpr() throws RecognitionException {
		UnaryExprContext _localctx = new UnaryExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unaryExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Increase || _la==Decrease) {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !(_la==Increase || _la==Decrease) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LeftParen:
			case BinNum:
			case OctNum:
			case DecNum:
			case HexNum:
			case Identifier:
			case StringConstant:
				{
				setState(105);
				postExpr();
				}
				break;
			case And:
			case Not:
			case Tilde:
				{
				setState(106);
				_la = _input.LA(1);
				if ( !(((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (And - 65)) | (1L << (Not - 65)) | (1L << (Tilde - 65)))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(107);
				castExpr();
				}
				break;
			case LogicAnd:
				{
				setState(108);
				match(LogicAnd);
				setState(109);
				library(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CastExprContext extends ParserRuleContext {
		public UnaryExprContext unaryExpr() {
			return getRuleContext(UnaryExprContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public CastExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_castExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterCastExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitCastExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitCastExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CastExprContext castExpr() throws RecognitionException {
		CastExprContext _localctx = new CastExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_castExpr);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				unaryExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				num();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulExprContext extends ParserRuleContext {
		public List<CastExprContext> castExpr() {
			return getRuleContexts(CastExprContext.class);
		}
		public CastExprContext castExpr(int i) {
			return getRuleContext(CastExprContext.class,i);
		}
		public List<TerminalNode> Star() { return getTokens(TBoxParser.Star); }
		public TerminalNode Star(int i) {
			return getToken(TBoxParser.Star, i);
		}
		public List<TerminalNode> Div() { return getTokens(TBoxParser.Div); }
		public TerminalNode Div(int i) {
			return getToken(TBoxParser.Div, i);
		}
		public List<TerminalNode> Mod() { return getTokens(TBoxParser.Mod); }
		public TerminalNode Mod(int i) {
			return getToken(TBoxParser.Mod, i);
		}
		public MulExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterMulExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitMulExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitMulExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MulExprContext mulExpr() throws RecognitionException {
		MulExprContext _localctx = new MulExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mulExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			castExpr();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 62)) & ~0x3f) == 0 && ((1L << (_la - 62)) & ((1L << (Star - 62)) | (1L << (Div - 62)) | (1L << (Mod - 62)))) != 0)) {
				{
				{
				setState(117);
				_la = _input.LA(1);
				if ( !(((((_la - 62)) & ~0x3f) == 0 && ((1L << (_la - 62)) & ((1L << (Star - 62)) | (1L << (Div - 62)) | (1L << (Mod - 62)))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(118);
				castExpr();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddExprContext extends ParserRuleContext {
		public List<MulExprContext> mulExpr() {
			return getRuleContexts(MulExprContext.class);
		}
		public MulExprContext mulExpr(int i) {
			return getRuleContext(MulExprContext.class,i);
		}
		public List<TerminalNode> Plus() { return getTokens(TBoxParser.Plus); }
		public TerminalNode Plus(int i) {
			return getToken(TBoxParser.Plus, i);
		}
		public List<TerminalNode> Minus() { return getTokens(TBoxParser.Minus); }
		public TerminalNode Minus(int i) {
			return getToken(TBoxParser.Minus, i);
		}
		public AddExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).enterAddExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBoxListener ) ((TBoxListener)listener).exitAddExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBoxVisitor ) return ((TBoxVisitor<? extends T>)visitor).visitAddExpr(this);
			else return visitor.visitChildren(this);
		}
	}
